[Java] Prepare for Java 11.